# requests-cache

./: .all-contributorsrc  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yaml  .travis.yml  CODESHELTER.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTORS.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  README  README.md  README.rst  docker-compose.yml  example.py  example_request.py  file::memory:?cache=shared  manual_test.py  mongita_test.py  noxfile.py  performance_test.py  pyproject.toml  requirements-test.txt  runtests.sh  sandbox.py  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  code_of_conduct.md  dependabot.yml  pre-commit.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md
.github/workflows/: build.yml  codeql.yml  deploy.yml
docs/: 404.rst  Dockerfile  Makefile  advanced_usage.md  advanced_usage.rst  api.md  api.rst  changelog.rst  conf.py  contributing.md  contributors.md  contributors.rst  docker-compose.yml  examples.md  examples.rst  history.md  index.md  index.rst  make.bat  project_info.md  reference.md  related_projects.md  related_projects.rst  security.md  security.rst  session.rst  user_guide.md  user_guide.rst  utilities.md
docs/_static/: collapsible_container.css  collapsible_container.js  table.css
docs/_templates/: module.rst_t  package.rst_t  page.html
docs/_templates/apidoc/: module.rst.jinja  package.rst.jinja
docs/api/: requests_cache.backends.base.md  requests_cache.backends.dynamodb.md  requests_cache.backends.filesystem.md  requests_cache.backends.gridfs.md  requests_cache.backends.mongodb.md  requests_cache.backends.redis.md  requests_cache.backends.sqlite.md  requests_cache.session.md
docs/images/: requests-cache-logo-white.xcf  requests-cache-logo.xcf
docs/project_info/: code_of_conduct.md  codeshelter.md  contributing.md  contributors.md  history.md  index.md  packages.md  related_projects.md
docs/sample_data/: sample_response.yaml  sample_response_binary.json  sample_response_json.json  sample_response_json.yaml
docs/user_guide/: advanced_requests.md  backends.md  compatibility.md  expiration.md  files.md  filtering.md  general.md  headers.md  index.md  inspection.md  installation.md  matching.md  security.md  serializers.md  troubleshooting.md
docs/user_guide/backends/: dynamodb.md  filesystem.md  gridfs.md  mongodb.md  redis.md  sqlite.md
examples/: README.md  basic_patching.py  basic_sessions.py  basic_usage.py  benchmark.py  cloudformation.yml  convert_cache.py  custom_cache_keys.py  custom_request_matcher.py  expiration.py  external_config.py  external_config.yml  generate_test_db.py  github_actions.yml  history.py  log_requests.py  performance_test.py  pygithub.py  rps_graph.py  session_patch.py  threads.py  time_machine_backtesting.py  url_patterns.py  vcr.py
requests_cache/: __init__.py  _utils.py  cache_control.py  cache_keys.py  compat.py  core.py  expiration.py  patcher.py  per_request.py  response.py  session.py  settings.py
requests_cache/backends/: __init__.py  base.py  db.py  dbdict.py  dynamodb.py  filesystem.py  gridfs.py  lru.py  memcached.py  mongo.py  mongodb.py  mongodict.py  redis.py  sqlite.py
requests_cache/backends/storage/: dbdict.py  dynamodbdict.py  filesystemdict.py  gridfspickledict.py  mongodict.py  redisdict.py
requests_cache/models/: __init__.py  base.py  raw_response.py  request.py  response.py  settings.py
requests_cache/policy/: __init__.py  actions.py  directives.py  expiration.py  settings.py
requests_cache/serializers/: __init__.py  base.py  bson_serializer.py  cattrs.py  content_decoder.py  json.py  json_serializer.py  pickle.py  pickle_serializer.py  pipeline.py  preconf.py  vcr.py
requests_cache/tests/: __init__.py  test_cache.py
tests/: README.md  __init__.py  benchmark_serializers.py  conftest.py  generate_test_db.py  performance_test.py  sample_response.json  test_cache.py  test_custom_dict.py  test_dbdict.py  test_dynamodbdict.py  test_expiration_datetime.py  test_filesystemdict.py  test_gridfsdict.py  test_mongodict.py  test_monkey_patch.py  test_per_request_cache.py  test_redisdict.py  test_response.py  test_thread_safety.py
tests/compat/: README.md  httpbin_sample.test-db  test_requests_mock_combine_cache.py  test_requests_mock_disable_cache.py  test_requests_mock_load_cache.py  test_responses_load_cache.py
tests/integration/: base_cache_test.py  base_storage_test.py  test_backends.py  test_cache.py  test_compat.py  test_db.py  test_dynamodb.py  test_filesystem.py  test_gridfs.py  test_lru.py  test_memory.py  test_mongodb.py  test_redis.py  test_sqlite.py  test_thread_safety.py  test_upgrade.py
tests/sample_data/: sample.db.0.3.0  sample.db.0.4.0  sample.db.0.4.13  sample.db.0.5.0  sample.db.0.5.1  sample.db.0.5.2  sample.db.0.6.0  sample.db.0.6.1  sample.db.0.6.2  sample.db.0.6.3  sample.db.0.6.4  sample.db.0.7.0  sample.db.0.7.1  sample.db.0.7.2  sample.db.0.7.3  sample.db.0.7.4  sample.db.0.7.5  sample.db.0.8.0  sample.db.0.8.1  sample.db.0.9.0  sample.db.0.9.1  sample.db.0.9.2  sample.db.0.9.3  sample.db.0.9.4  sample.db.0.9.5  sample.db.0.9.6  sample.db.0.9.7  sample.db.0.9.8  sample.db.1.0.0  sample.db.1.0.0-alpha  sample.db.1.0.0-beta  sample.db.1.1.0  sample.db.1.2.0  sample.db.1.3.0  vcr_requests_cache.yaml  vcr_vcrpy.yaml
tests/unit/: test_base_cache.py  test_cache.py  test_cache_control.py  test_cache_keys.py  test_expiration.py  test_monkey_patch.py  test_normalize.py  test_patcher.py  test_response.py  test_serializers.py  test_session.py  test_thread_safety.py
tests/unit/models/: test_base.py  test_raw_response.py  test_request.py  test_response.py
tests/unit/policy/: test_actions.py  test_expiration.py
