[bdist_wheel]
universal = 1

[metadata]
description = Persistent cache for requests library
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
keywords = requests, cache, persistence
license = BSD License
license_files = LICENSE
python_requires = >=3.6
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Software Development :: Libraries :: Python Modules
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[flake8]
max_line_length = 120
exclude = __pycache__,.tox,build,dist,test,venv
# Defer these rules to black:
ignore =
    E225  # missing whitespace around operator
    E501  # line too long
    W503  # line break before binary operator
    W504  # line break after  binary operator
